Tue Oct  9 20:28:00 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:

          Removed an unused parameter.

Tue Oct  9 19:31:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * MPC/modules/TYPESUPPORTHelper.pm:

          Addressed a possible bug listed in the comments.

        * configure:

          Added a --dry-run option (mostly useful for maintaining the script).
          Added an option to provide extra args to mwc.pl.
          Cleaned up script.

        * tests/DCPS/UnitTests/RtpsFragmentation.cpp:

          Fixed missing std library #include.

Tue Oct  9 18:27:17 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>

        * dds/DCPS/RecorderImpl.cpp:
        * dds/DCPS/ReplayerImpl.cpp:

          Remove trailing spaces.

Tue Oct  9 17:21:18 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.cpp:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/TransportCustomizedElement.h:
        * dds/DCPS/transport/framework/TransportQueueElement.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.h:
        * dds/DCPS/transport/framework/TransportSendBuffer.inl:
        * dds/DCPS/transport/framework/TransportSendBuffer.cpp:
        * dds/DCPS/RTPS/MessageTypes.h:
        * dds/DCPS/transport/rtps_udp/RtpsCustomizedElement.h:
        * dds/DCPS/transport/rtps_udp/RtpsCustomizedElement.inl:
        * dds/DCPS/transport/rtps_udp/RtpsCustomizedElement.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.h:
        * dds/DCPS/transport/rtps_udp/RtpsSampleHeader.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpReceiveStrategy.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpSendStrategy.h: